Fix: Focus ring can appear behind siblings

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 /* Z-index:
+ *  5 - Focus ring
  * 10 - TopBar
  * 20 - Tippy
  * 30 - Modals
@@ -13,7 +14,7 @@
 @layer base {
   *:focus-visible, .focus-ring {
     outline: none;
-    @apply ring-2 ring-primary-500 dark:ring-primary-400 border-transparent relative;
+    @apply ring-2 ring-primary-500 dark:ring-primary-400 border-transparent relative z-5;
   }
 
   *, ::before, ::after {
